--- a/cs-backend/package.json
+++ b/cs-backend/package.json
@@ -7,9 +7,17 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "babel-polyfill": "^6.26.0",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
+    "mysql2": "^1.5.3",
+    "sequelize": "^4.37.6",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "nodemon": "^1.17.3"
   }
 }
