--- a/cs-backend/package.json
+++ b/cs-backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^2.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
     "mysql2": "^1.5.3",
