--- a/cake-shop-backend/package.json
+++ b/cake-shop-backend/package.json
@@ -14,10 +14,12 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.0",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.8",
+    "multer": "^1.3.1",
     "validator": "^10.7.0"
   },
   "devDependencies": {
