:rocket: add cake shop admin use next.js

--- a/cake-shop-backend/package.json
+++ b/cake-shop-backend/package.json
@@ -4,7 +4,8 @@
   "description": "cake shop backend",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "NODE_ENV=production node index.js"
   },
   "keywords": [
     "cake",
