--- a/cake-shop-admin/package.json
+++ b/cake-shop-admin/package.json
@@ -1,15 +1,26 @@
 {
   "name": "cake-shop-admin",
-  "scripts": {
-    "dev": "NODE_ENV=dev next",
-    "build": "next build",
-    "start": "NODE_ENV=production next start"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@zeit/next-sass": "^0.2.0",
-    "next": "^6.1.1",
-    "node-sass": "^4.9.3",
+    "antd": "^3.8.4",
+    "axios": "^0.18.0",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-scripts": "1.1.5"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.3",
+    "node-sass-chokidar": "^1.3.3"
+  },
+  "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
