--- a/cake-shop-admin/package.json
+++ b/cake-shop-admin/package.json
@@ -3,24 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/g2": "^3.2.7",
     "antd": "^3.8.4",
     "axios": "^0.18.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.8.0",
+    "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
-    "node-sass-chokidar": "^1.3.3"
+    "react-app-rewired": "^1.5.2"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
+    "start-js": "react-app-rewired start",
     "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
+    "build-js": "react-app-rewired build",
     "build": "npm-run-all build-css build-js",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
