:art: dev cake shop web

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
   "cSpell.words": [
     "antd",
     "antialiased",
+    "antv",
     "prefetch",
+    "scrollbar",
     "unfetch",
     "zeit"
   ]
