--- a/cake-shop-admin/package.json
+++ b/cake-shop-admin/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.8.4",
     "axios": "^0.18.0",
     "react": "^16.4.2",
+    "react-app-rewire-less": "^2.1.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
