:sparkles: add manager context

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "antd",
     "antialiased",
     "antv",
+    "appstore",
+    "managerlogin",
     "prefetch",
     "scrollbar",
     "unfetch",
