--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "Coord",
     "Nomatch",
     "Popconfirm",
     "Sider",
@@ -7,6 +8,8 @@
     "antialiased",
     "antv",
     "appstore",
+    "bizcharts",
+    "crosshairs",
     "managerlogin",
     "prefetch",
     "scrollbar",
