--- a/cake-shop-admin/package.json
+++ b/cake-shop-admin/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@antv/g2": "^3.2.7",
     "antd": "^3.8.4",
     "axios": "^0.18.0",
+    "bizcharts": "^3.2.3-beta.2",
     "react": "^16.4.2",
     "react-app-rewire-less": "^2.1.2",
     "react-dom": "^16.4.2",
